--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
-    "autosize": "~3.0.14"
+    "autosize": "~3.0.14",
+    "showdown": "~1.3.0"
   }
 }
